[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Weapon.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Characters/Ships/Parts/Weapons/Weapons.png" type="Texture" id=2]
[ext_resource path="res://Graphics/SHMUP Tiles.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Weapons/Projectiles/Templates/BasicBullet.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Flash"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="WeaponTemplate" type="Node2D"]
position = Vector2( -17, -3 )
script = ExtResource( 1 )
projectile_tscn = ExtResource( 5 )
active_weapon = true
shoot_speed = 5.0

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Bullets" type="Node" parent="."]

[node name="ProjectileSpawnPos" type="Position2D" parent="."]
position = Vector2( 0.84189, -1.20135 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 1 )
z_index = 1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1.53837, 2.62276, 5.06992, 8.91605 )

[node name="MuzzleFlashSprite" type="Sprite" parent="."]
position = Vector2( 0.777271, -3.34313 )
scale = Vector2( 0.395346, 0.223097 )
z_index = 1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 85.1791, -0.970461, 14.2355, 16.1767 )

[node name="FlashAnim" type="AnimationPlayer" parent="MuzzleFlashSprite"]
autoplay = "Flash"
anims/Flash = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Audio" type="Node" parent="."]

[node name="Shoot" type="AudioStreamPlayer" parent="Audio"]
bus = "SFX"

[node name="CantFire" type="AudioStreamPlayer2D" parent="Audio"]
bus = "SFX"

[node name="ReloadedLabel" type="Sprite" parent="."]
position = Vector2( 1.4467, 0.833946 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 2.07463, 18.695, 13.7235, 13.4315 )

[node name="Modules" type="Node2D" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="cooldown_finished"]
